# revocalize

./: .gitattributes  .gitignore  pyproject.toml  requirements.txt
docs/: rvc_implementation_guide.md
src/: EDA.ipynb  constants.py  notebook.ipynb
src/data_models/: data_models.py
src/models/: audio_encoder.py  generator.py  generator_module.py  index_creator.py  model_base.py  preprocessor.py
src/modules/: inference.py  preprocessing.py  training.py
src/saved_models/generators/: model.pt
src/scripts/: cli.py  infer.py  preprocess.py  train.py
src/utils/: jar.py  training_history.py  wandb_details.py
