[project]
name = "revocalize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "scipy>=1.11.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "tqdm>=4.66.0",
    "wandb>=0.23.0",
]
